# codeflip

./: .pre-commit-config.yaml  GEMINI.md  README.md  commitlint.config.js  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  nginx.prod.conf
api/: Dockerfile  Dockerfile.prod  GEMINI.md  conftest.py  data.yaml  entrypoint.prod.sh  pyproject.toml  pytest.ini  requirements.txt  schema.yml  test_script.py
api/ai/: models.py  services.py  tasks.py  urls.py  views.py
api/ai/migrations/: 0001_initial.py
api/apps/: celery.py  settings.py  urls.py
api/engine/: constants.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
api/engine/migrations/: 0001_initial.py
api/problem/: admin.py  admin_views.py  apps.py  context_processors.py  models.py  permissions.py  serializers.py  shared_utils.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
api/problem/language_utils/: cpp_utils.py  java_utils.py  js_ts_utils.py  python_utils.py
api/problem/migrations/: 0001_initial.py  0002_initial.py  0003_problem_name.py  0004_codeblock_imports_codeblock_runner_code_and_more.py  0005_testcase_display_testcase.py  0006_testcase_output_type_alter_solution_status.py  0007_alter_problem_options_solution_testcase_results_and_more.py  0008_discuss_downvotes_discuss_is_editorial_and_more.py  0009_solution_is_editorial.py  0010_remove_solution_is_editorial.py  0011_remove_codeblock_imports_alter_codeblock_language_and_more.py  0013_method_is_constructor.py  (+3 more)
api/user/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
(+85 files in other folders)
