[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.0",
    "django==5.2.8",
    "django-ckeditor==6.7.3",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-js-asset==3.1.2",
    "djangorestframework==3.16.1",
    "pillow==12.0.0",
    "psycopg2-binary==2.9.11",
    "sqlparse==0.5.3",
    "uv==0.9.11",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2024.12.1",
    "requests==2.32.3",
    "social-auth-app-django>=5.6.0",
    "google-generativeai>=0.8.6",
    "openai>=1.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "apps.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
